Should correct a white space issue
There was additional white space on certain smaller screen sizes that was appearing these additions should fix that.

--- a/style.css
+++ b/style.css
@@ -145,11 +145,12 @@ footer p {
 
   .logo {
     margin: 12px 12px 12px 12px;
+    padding-top: 0;
     font-size: 48px;
   }
   
   header nav ul {
-    padding-top: 12px;
+    align-items: center;
   }
 
   /* ---  Groups & Items --- */
@@ -170,6 +171,18 @@ footer p {
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+  
+  form div {
+    flex-direction: column;
+  }
+  
+  form button {
+    flex: 1;
+  }
+  
+  form select, form input {
+    margin-bottom: 0px;
   }
 
 }
